# xenomai-3

./: .gitignore  CMakeLists.txt  README.md
cmake/: MacroOpenSplice.cmake  osmacros.cmake
scripts/: config_cmake.py  init_rtp.sh  (+10 more)
src/data_interface/: CMakeLists.txt  package.xml
src/data_interface/msg/: MsgDynoCmd.msg  MsgDynoSensing.msg  MsgMcuOutput.msg  MsgMotorOutput.msg
src/motor_control_unit/: CMakeLists.txt  package.xml
src/motor_control_unit/cmake/: MacroOpenSplice.cmake
src/motor_control_unit/src/controller_code/: controller_main.cpp
src/motor_control_unit/src/dds_code/: Entities.cpp  Entities.h  dds_bridge.hpp  from_rt_pipe.cpp  rt_pipe.cpp  to_rt_pipe.cpp
src/motor_control_unit/src/idl/: MotorControllerUnitModule.idl
src/motor_control_unit/src/matlab_code/rtw/c/ert/: ert_lcc64.tmf  ert_tornado.tmf
src/motor_control_unit/src/matlab_code/rtw/c/src/rapid/fmu/: RTWCG_FMU1_target.h
src/motor_control_unit/src/model_code/: ert_main.cpp  generated_model.cpp  generated_model_private.h  generated_model_types.h  input_interface.cpp  input_interface.h  output_interface.cpp  output_interface.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h
src/motor_control_unit/src/ni_code/: DigitalInputOutputTask.cpp  DigitalInputOutputTask.h  DmaDigitalInputOutputTask.cpp  DmaDigitalInputOutputTask.h  RtDigitalInputTask.cpp  RtDigitalInputTask.h  RtDigitalOutputTask.cpp  RtDigitalOutputTask.h  RtDmaDigitalInputOutputTask.cpp  RtDmaDigitalInputOutputTask.h  di_dma_main.cpp  di_main.cpp  do_main.cpp  pwm_do_main.cpp  pwm_input.cpp  pwm_input_main.cpp  pwm_output.cpp  pwm_output_main.cpp  rt_dma_di_main.cpp
src/motor_control_unit/src/ni_code/nimhddk/: osiBus.h  osiTypes.h
src/motor_control_unit/src/ni_code/nimhddk/LinuxKernel/: osiUserCode.cpp
src/motor_control_unit/src/ni_code/nimhddk/LinuxKernel/nirlpk/: ioctl.h
src/motor_control_unit/src/ni_code/nixseries/CHInCh/: tCHInChDMAChannel.cpp  tCHInChDMAChannelController.cpp  tDMABuffer.cpp  tScatterGatherDMABuffer.cpp
src/motor_control_unit/src/ni_code/nixseries/ChipObjects/: tBrdServices.cpp  tCHInCh.cpp  tDO.cpp  tInTimer.cpp  tOutTimer.cpp  tStreamCircuitRegMap.cpp  tXSeries.cpp
src/motor_control_unit/src/ni_code/nixseries/Examples/: aiex3.cpp  aiex4.cpp  aiex5.cpp  aiex6.cpp  aoex1.cpp  aoex3.cpp  aoex5.cpp  aoex6.cpp  boardBringup.cpp  counterResetHelper.cpp  dataHelper.ipp  devices.cpp  dioex1.cpp  dioex2.cpp  dioex5.cpp  dioex6.cpp  gpctex2.cpp  gpctex3.cpp  gpctex4.cpp  gpctex5.cpp  gpctex7.cpp  gpctex8.cpp  gpctex9.cpp  pfiRtsiResetHelper.cpp  pllHelper.cpp  streamHelper.cpp
src/motor_control_unit/src/nodejs_code/: ddsBridge.js  package.json
src/motor_control_unit/src/nodejs_code/dds_bridge/: ddsBridge.js  ddsBridge.ts  package-lock.json  package.json  vortexdds.d.ts
src/motor_control_unit/src/peak_can_code/: PeakCanReceiveTask.cpp  PeakCanReceiveTask.h  PeakCanTask.cpp  PeakCanTask.h  PeakCanTransmitTask.cpp  PeakCanTransmitTask.h  RtPeakCanReceiveTask.cpp  RtPeakCanReceiveTask.h  RtPeakCanTransmitTask.cpp  RtPeakCanTransmitTask.h  peak_can_receive.cpp  peak_can_transmit.cpp
src/motor_control_unit/src/pickering_code/: Makefile  PxiCardTask.cpp  PxiCardTask.h  RtGenerateResistanceArrayTask.cpp  RtGenerateResistanceArrayTask.h  RtGenerateStateTask.cpp  RtGenerateStateTask.h  RtMacro.h  RtPeriodicTask.cpp  RtPeriodicTask.h  RtResistanceTask.cpp  RtResistanceTask.h  RtSharedArray.cpp  RtSharedArray.h  RtSharedResistanceArray.cpp  RtSharedResistanceArray.h  RtSharedState.cpp  RtSharedState.h  RtSwitchTask.cpp  RtSwitchTask.h  RtTaskHandler.cpp  RtTaskHandler.h  non_precision_resistor_controller  non_precision_resistor_controller_main.cpp
src/motor_control_unit/src/rtss_code/: rtss_code.cpp  rtss_code.h  rtss_code.vcxproj  rtss_code.vcxproj.filters
src/motor_control_unit/src/simulink_generated_code/resistance_testing_grt_rtw/: buildInfo.mat  codeInfo.mat  rtw_proj.tmw  testing_main.cpp
src/motor_control_unit/src/simulink_generated_code/switching_testing_grt_rtw/: codedescriptor.dmr  defines.txt  multiword_types.h  rtwtypes.h  testing.cpp  testing.h  testing_data.cpp  testing_main.cpp  testing_private.h
src/motor_control_unit/src/simulink_generated_code/switching_testing_grt_rtw/tmwinternal/: simulink_cache.xml
src/motor_control_unit/src/simulink_generated_code/testing_grt_rtw/: CMakeLists.txt  testing_main.cpp
src/motor_control_unit/src/utils/: ElapsedTimes.hpp  FileWriter.hpp  SynchronizedFile.hpp  example_utilities.h
src/motor_control_unit/src/xenomai_code/: CMakeLists.txt  MessageTypes.h  RtMacro.h  dds_pipe.cpp  five-tasks.cpp  motor_monitor.cpp  semaphore.cpp  test_rt.cpp
src/motor_control_unit/x64_vs_proj/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj.filters  MotorControllerUnitModule_generated_sources.vcxproj  MotorControllerUnitModule_generated_sources.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  controller.vcxproj  datamodel.vcxproj  dds-motor-controller.sln  motor.vcxproj
src/motor_model_v2_node/: .CMakeLists.txt.swp  CMakeLists.txt  package.xml
src/motor_model_v2_node/cmake/: FindOpenSplice.cmake  MacroOpenSplice.cmake
src/motor_model_v2_node/src/controller_code/: controller_main.cpp
src/motor_model_v2_node/src/dds_code/: Entities.cpp  Entities.h
src/motor_model_v2_node/src/idl/: ControlMessage.idl  MotorMessage.idl
src/motor_model_v2_node/src/matlab_code/rtw/c/ert/: ert_vcx64.tmf
src/motor_model_v2_node/src/matlab_code/rtw/c/src/rapid/fmu/: RTWCG_FMU1ME_target.c  RTWCG_FMU1_target.c  RTWCG_FMU2_target.c  RTWCG_FMU2_target.h
src/motor_model_v2_node/src/matlab_code/rtw/c/src/rapid/fmu/FMUME1Header/: fmiFunctions.h
src/motor_model_v2_node/src/model_code/: SharedMsg.h  ert_main.cpp  generated_model.cpp  generated_model.h  generated_model_private.h  generated_model_types.h  input_interface.cpp  input_interface.h  output_interface.cpp  output_interface.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtwtypes.h
src/motor_model_v2_node/src/utils/: ElapsedTimes.hpp
(+83 files in other folders)
